--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://shansharma2707:buddy123@cluster0.ytot1mv.mongodb.net/classroom
+MONGO_URI=node
 JWT_SECRET=shantanu
 PORT=5000
 NODE_ENV=production
